--- a/web/components/sidebar/index.html
+++ b/web/components/sidebar/index.html
@@ -1,4 +1,6 @@
 <title></title>
-<div id="root"></div>
+<body>
+  <div id="root"></div>
+</body>
 <script type="module" src="./main.tsx"></script>
 
