--- a/web/components/sidebar/global.css
+++ b/web/components/sidebar/global.css
@@ -35,13 +35,37 @@ iframe{
 }
 
 .ant-tabs-content-holder{
+  position: relative;
   height: 0;
   flex: auto;
   background-color: #F5F5F5;
   color: #000;
-  box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.12);
+  /* box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.12); */
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+}
+.ant-tabs-content-holder::before{
+  display: block;
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 10px;
+  top: -10px;
+  pointer-events: none;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.12);
+  z-index: 10;
+}
+.ant-tabs-content-holder::after{
+  display: block;
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 10px;
+  bottom: -10px;
+  pointer-events: none;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.12);
+  z-index: 10;
 }
 
 .ant-tabs-content{
